# QWAS

./: CMakeLists.txt  README.md
.github/workflows/: pages.yml
include/: drone.h  game.h  qwas_app.h
src/: drone.cpp  game.cpp  main.cpp  qwas_app.cpp
src/web/: web_main.cpp
web/: emscripten_shell.html
